maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: not found: value get
    if (get.direction==direction.sud) {
        ^Escaper:13: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime26.Escaper
    if (get.direction==direction.sud) {
                       ^