maze.lessons.maze.island.IslandMaze.scala.code
def run1() {
  while (!(estSurBiscuit)) {
    keepHandOnSideWall()
    avance1()
  }
  prendBiscuit()
}


override def run() {
  while (getX()!=0) {
    if (get.direction==direction.sud) {
      gauche()
    }
   avance1()
  }
  run1()
 
}



def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()) {
   droite()
  }
}

def avance1() {
  if (estFaceMur()) {
    droite()
    
  } else {avance()}
}